[gd_scene load_steps=69 format=3 uid="uid://bfdjlg0y0yygk"]

[ext_resource type="Texture2D" uid="uid://de8p8ofmf57kw" path="res://assets/images/ui_images/egg_book/egg_book_contents.png" id="1_6odif"]
[ext_resource type="Theme" uid="uid://xycay2vr14mx" path="res://scenes/main_theme.tres" id="1_ugqs1"]
[ext_resource type="Texture2D" uid="uid://hf1padb37vwn" path="res://assets/images/ui_images/egg_book/egg_book_p1.png" id="2_lyfku"]
[ext_resource type="Script" path="res://scenes/game_elements/egg_book/egg_book.gd" id="2_nrwuu"]
[ext_resource type="Script" path="res://scenes/game_elements/notebook/page_1/NextPage.gd" id="3_cykfr"]
[ext_resource type="Texture2D" uid="uid://c1hwjb7fwmuwl" path="res://assets/images/ui_images/egg_book/egg_book_p2.png" id="3_dbesy"]
[ext_resource type="Texture2D" uid="uid://bg1wkj8sgx85w" path="res://assets/images/ui_images/egg_book/egg_book_p3.png" id="4_0hwcj"]
[ext_resource type="Texture2D" uid="uid://bd3rprm8j55ts" path="res://assets/images/ui_images/arrow_bobbing/split_1.png" id="5_1ntgw"]
[ext_resource type="Texture2D" uid="uid://ca2mcv2i6qfcy" path="res://assets/images/ui_images/arrow_bobbing/split_2.png" id="6_kk76k"]
[ext_resource type="Texture2D" uid="uid://bjaywdp0vq7cg" path="res://assets/images/ui_images/arrow_bobbing/split_3.png" id="7_stg2j"]
[ext_resource type="Texture2D" uid="uid://b3va1a04bjeop" path="res://assets/images/ui_images/arrow_bobbing/split_4.png" id="8_7ylh3"]
[ext_resource type="Texture2D" uid="uid://bjm037fk456xe" path="res://assets/images/ui_images/arrow_bobbing/split_5.png" id="9_oagop"]
[ext_resource type="Texture2D" uid="uid://co37uhvha0y1c" path="res://assets/images/ui_images/arrow_bobbing/split_6.png" id="10_qpdb4"]
[ext_resource type="Texture2D" uid="uid://bjvxs8rosmrsl" path="res://assets/images/ui_images/arrow_bobbing/split_7.png" id="11_kt7dc"]
[ext_resource type="Texture2D" uid="uid://7imo27ck5doj" path="res://assets/images/ui_images/arrow_bobbing/split_8.png" id="12_o2vyp"]
[ext_resource type="Texture2D" uid="uid://beyaeaiou61sd" path="res://assets/images/ui_images/arrow_bobbing/split_9.png" id="13_v6qh8"]
[ext_resource type="Texture2D" uid="uid://bij1di81fnjib" path="res://assets/images/ui_images/arrow_bobbing/split_10.png" id="14_qxrch"]
[ext_resource type="Texture2D" uid="uid://b8jc1qyvk43vv" path="res://assets/images/ui_images/arrow_bobbing/split_11.png" id="15_lwiki"]
[ext_resource type="Texture2D" uid="uid://duni4amfhaq5b" path="res://assets/images/ui_images/arrow_bobbing/split_12.png" id="16_x0kql"]
[ext_resource type="Texture2D" uid="uid://bjghnamah32yn" path="res://assets/images/ui_images/arrow_bobbing/split_13.png" id="17_dniqi"]
[ext_resource type="Texture2D" uid="uid://ddhaod5o4cxaq" path="res://assets/images/ui_images/arrow_bobbing/split_14.png" id="18_uleya"]
[ext_resource type="Texture2D" uid="uid://d0bpv70g5sgwq" path="res://assets/images/ui_images/arrow_bobbing/split_15.png" id="19_kl6id"]
[ext_resource type="Texture2D" uid="uid://bvkia8gc6ag73" path="res://assets/images/ui_images/arrow_bobbing/split_16.png" id="20_ghynq"]
[ext_resource type="Texture2D" uid="uid://dk867gd7qxa76" path="res://assets/images/ui_images/arrow_bobbing/split_17.png" id="21_fly86"]
[ext_resource type="Texture2D" uid="uid://ddf6fxahrnocs" path="res://assets/images/ui_images/arrow_bobbing/split_18.png" id="22_dg2i2"]
[ext_resource type="Texture2D" uid="uid://blbkue2saw1hv" path="res://assets/images/ui_images/arrow_bobbing/split_19.png" id="23_cafsr"]
[ext_resource type="Texture2D" uid="uid://corda05kxwdo6" path="res://assets/images/ui_images/arrow_bobbing/split_20.png" id="24_37uln"]
[ext_resource type="Texture2D" uid="uid://co3r51ps12jwm" path="res://assets/images/ui_images/arrow_bobbing/split_21.png" id="25_ojkjj"]
[ext_resource type="Texture2D" uid="uid://b3d0j3222rfht" path="res://assets/images/ui_images/arrow_bobbing/split_22.png" id="26_ievvh"]
[ext_resource type="Texture2D" uid="uid://b0p2rha6aopgh" path="res://assets/images/ui_images/arrow_bobbing/split_23.png" id="27_w2b2t"]
[ext_resource type="Texture2D" uid="uid://c7qkevq40mhoo" path="res://assets/images/ui_images/arrow_bobbing/split_24.png" id="28_vq653"]
[ext_resource type="Texture2D" uid="uid://cecmivpa4qmb3" path="res://assets/images/ui_images/arrow_bobbing/split_25.png" id="29_r11ce"]
[ext_resource type="Texture2D" uid="uid://dkdb5a53fc8nt" path="res://assets/images/ui_images/arrow_bobbing/split_26.png" id="30_gqusp"]
[ext_resource type="Texture2D" uid="uid://bntjpep7dkg7v" path="res://assets/images/ui_images/arrow_bobbing/split_27.png" id="31_neyd5"]
[ext_resource type="Texture2D" uid="uid://b8ligtxfil7m2" path="res://assets/images/ui_images/arrow_bobbing/split_28.png" id="32_pdipu"]
[ext_resource type="Texture2D" uid="uid://brbdpilforgkm" path="res://assets/images/ui_images/arrow_bobbing/split_29.png" id="33_ttu4d"]
[ext_resource type="Texture2D" uid="uid://bvdkaujfctea0" path="res://assets/images/ui_images/arrow_bobbing/split_30.png" id="34_w3npu"]
[ext_resource type="Texture2D" uid="uid://ccwpy7ig0ewbt" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_1.png" id="35_d3rkq"]
[ext_resource type="Texture2D" uid="uid://bd577rm5phedi" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_2.png" id="36_rktae"]
[ext_resource type="Texture2D" uid="uid://cyitj4b4stgo2" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_3.png" id="37_7ekyd"]
[ext_resource type="Texture2D" uid="uid://dhmkkuxmjt54x" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_4.png" id="38_p57oc"]
[ext_resource type="Texture2D" uid="uid://dgipdvy1yfeu6" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_5.png" id="39_nnlme"]
[ext_resource type="Texture2D" uid="uid://b3wxjl11qmc43" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_6.png" id="40_47bmb"]
[ext_resource type="Texture2D" uid="uid://bjutnh1iqhx55" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_7.png" id="41_4rkav"]
[ext_resource type="Texture2D" uid="uid://dhaa340uh7r4x" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_8.png" id="42_loulp"]
[ext_resource type="Texture2D" uid="uid://dmeeu60gutp1h" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_9.png" id="43_3dg07"]
[ext_resource type="Texture2D" uid="uid://c3plhijaqayfp" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_10.png" id="44_tirw3"]
[ext_resource type="Texture2D" uid="uid://ce2bvtj1idaab" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_11.png" id="45_28y5e"]
[ext_resource type="Texture2D" uid="uid://hheu1r0ypavc" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_12.png" id="46_luw4y"]
[ext_resource type="Texture2D" uid="uid://0u4ouq5tr34a" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_13.png" id="47_whdct"]
[ext_resource type="Texture2D" uid="uid://cvlu1xqai1cyu" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_14.png" id="48_53k6u"]
[ext_resource type="Texture2D" uid="uid://bb5hlkngyfq4w" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_15.png" id="49_r00ld"]
[ext_resource type="Texture2D" uid="uid://cs6hmcl3h4h70" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_16.png" id="50_t3iiy"]
[ext_resource type="Texture2D" uid="uid://dk4r54vjalm2j" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_17.png" id="51_xpp7c"]
[ext_resource type="Texture2D" uid="uid://dv5t7e5sgw21u" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_18.png" id="52_4phu7"]
[ext_resource type="Texture2D" uid="uid://du04x17rmaq21" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_19.png" id="53_6s0if"]
[ext_resource type="Texture2D" uid="uid://w7d4o0r8kq14" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_20.png" id="54_m7mc4"]
[ext_resource type="Texture2D" uid="uid://6ke0781s474p" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_21.png" id="55_tbo55"]
[ext_resource type="Texture2D" uid="uid://cqah5aamu1jnb" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_22.png" id="56_7ofbq"]
[ext_resource type="Texture2D" uid="uid://d1b2l61v0ngbi" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_23.png" id="57_x6dii"]
[ext_resource type="Texture2D" uid="uid://ctot0ttdil8qc" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_24.png" id="58_mgsyg"]
[ext_resource type="Texture2D" uid="uid://bdw8yx18aulyd" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_25.png" id="59_ivi2a"]
[ext_resource type="Texture2D" uid="uid://8mqrj1ncdcek" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_26.png" id="60_1sao6"]
[ext_resource type="Texture2D" uid="uid://dp57xmyc2xtqx" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_27.png" id="61_u5fcs"]
[ext_resource type="Texture2D" uid="uid://cqfsxefj7ulxj" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_28.png" id="62_wi8rm"]
[ext_resource type="Texture2D" uid="uid://cuo6q3td87ohl" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_29.png" id="63_jarja"]
[ext_resource type="Texture2D" uid="uid://uqxl80hyyga5" path="res://assets/images/ui_images/arrow_bobbing_red_border/split_30.png" id="64_472jk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k8uxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1ntgw")
}, {
"duration": 1.0,
"texture": ExtResource("6_kk76k")
}, {
"duration": 1.0,
"texture": ExtResource("7_stg2j")
}, {
"duration": 1.0,
"texture": ExtResource("8_7ylh3")
}, {
"duration": 1.0,
"texture": ExtResource("9_oagop")
}, {
"duration": 1.0,
"texture": ExtResource("10_qpdb4")
}, {
"duration": 1.0,
"texture": ExtResource("11_kt7dc")
}, {
"duration": 1.0,
"texture": ExtResource("12_o2vyp")
}, {
"duration": 1.0,
"texture": ExtResource("13_v6qh8")
}, {
"duration": 1.0,
"texture": ExtResource("14_qxrch")
}, {
"duration": 1.0,
"texture": ExtResource("15_lwiki")
}, {
"duration": 1.0,
"texture": ExtResource("16_x0kql")
}, {
"duration": 1.0,
"texture": ExtResource("17_dniqi")
}, {
"duration": 1.0,
"texture": ExtResource("18_uleya")
}, {
"duration": 1.0,
"texture": ExtResource("19_kl6id")
}, {
"duration": 1.0,
"texture": ExtResource("20_ghynq")
}, {
"duration": 1.0,
"texture": ExtResource("21_fly86")
}, {
"duration": 1.0,
"texture": ExtResource("22_dg2i2")
}, {
"duration": 1.0,
"texture": ExtResource("23_cafsr")
}, {
"duration": 1.0,
"texture": ExtResource("24_37uln")
}, {
"duration": 1.0,
"texture": ExtResource("25_ojkjj")
}, {
"duration": 1.0,
"texture": ExtResource("26_ievvh")
}, {
"duration": 1.0,
"texture": ExtResource("27_w2b2t")
}, {
"duration": 1.0,
"texture": ExtResource("28_vq653")
}, {
"duration": 1.0,
"texture": ExtResource("29_r11ce")
}, {
"duration": 1.0,
"texture": ExtResource("30_gqusp")
}, {
"duration": 1.0,
"texture": ExtResource("31_neyd5")
}, {
"duration": 1.0,
"texture": ExtResource("32_pdipu")
}, {
"duration": 1.0,
"texture": ExtResource("33_ttu4d")
}, {
"duration": 1.0,
"texture": ExtResource("34_w3npu")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_d3rkq")
}, {
"duration": 1.0,
"texture": ExtResource("36_rktae")
}, {
"duration": 1.0,
"texture": ExtResource("37_7ekyd")
}, {
"duration": 1.0,
"texture": ExtResource("38_p57oc")
}, {
"duration": 1.0,
"texture": ExtResource("39_nnlme")
}, {
"duration": 1.0,
"texture": ExtResource("40_47bmb")
}, {
"duration": 1.0,
"texture": ExtResource("41_4rkav")
}, {
"duration": 1.0,
"texture": ExtResource("42_loulp")
}, {
"duration": 1.0,
"texture": ExtResource("43_3dg07")
}, {
"duration": 1.0,
"texture": ExtResource("44_tirw3")
}, {
"duration": 1.0,
"texture": ExtResource("45_28y5e")
}, {
"duration": 1.0,
"texture": ExtResource("46_luw4y")
}, {
"duration": 1.0,
"texture": ExtResource("47_whdct")
}, {
"duration": 1.0,
"texture": ExtResource("48_53k6u")
}, {
"duration": 1.0,
"texture": ExtResource("49_r00ld")
}, {
"duration": 1.0,
"texture": ExtResource("50_t3iiy")
}, {
"duration": 1.0,
"texture": ExtResource("51_xpp7c")
}, {
"duration": 1.0,
"texture": ExtResource("52_4phu7")
}, {
"duration": 1.0,
"texture": ExtResource("53_6s0if")
}, {
"duration": 1.0,
"texture": ExtResource("54_m7mc4")
}, {
"duration": 1.0,
"texture": ExtResource("55_tbo55")
}, {
"duration": 1.0,
"texture": ExtResource("56_7ofbq")
}, {
"duration": 1.0,
"texture": ExtResource("57_x6dii")
}, {
"duration": 1.0,
"texture": ExtResource("58_mgsyg")
}, {
"duration": 1.0,
"texture": ExtResource("59_ivi2a")
}, {
"duration": 1.0,
"texture": ExtResource("60_1sao6")
}, {
"duration": 1.0,
"texture": ExtResource("61_u5fcs")
}, {
"duration": 1.0,
"texture": ExtResource("62_wi8rm")
}, {
"duration": 1.0,
"texture": ExtResource("63_jarja")
}, {
"duration": 1.0,
"texture": ExtResource("64_472jk")
}],
"loop": true,
"name": &"hover",
"speed": 30.0
}]

[node name="EggBook" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ugqs1")
script = ExtResource("2_nrwuu")

[node name="Contents" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentsImage" type="TextureRect" parent="Contents"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6odif")

[node name="NextPage" type="Button" parent="Contents"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -314.0
offset_right = -93.0
offset_bottom = 314.0
grow_horizontal = 0
grow_vertical = 2
theme_type_variation = &"ArrowButton"
icon_alignment = 1
script = ExtResource("3_cykfr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Contents/NextPage"]
position = Vector2(20, 314)
rotation = 4.71239
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_k8uxc")
animation = &"hover"
autoplay = "default"

[node name="Page1" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P1Image" type="TextureRect" parent="Page1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_lyfku")

[node name="PrevPage" type="Button" parent="Page1"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -314.0
offset_right = 211.0
offset_bottom = 314.0
grow_vertical = 2
theme_type_variation = &"ArrowButton"
icon_alignment = 1
script = ExtResource("3_cykfr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Page1/PrevPage"]
position = Vector2(136, 314)
rotation = 1.5708
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_k8uxc")
autoplay = "default"
frame_progress = 0.986239

[node name="NextPage" type="Button" parent="Page1"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -314.0
offset_right = -93.0
offset_bottom = 314.0
grow_horizontal = 0
grow_vertical = 2
theme_type_variation = &"ArrowButton"
icon_alignment = 1
script = ExtResource("3_cykfr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Page1/NextPage"]
position = Vector2(20, 314)
rotation = 4.71239
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_k8uxc")
autoplay = "default"
frame_progress = 0.293086

[node name="Page2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P2Image" type="TextureRect" parent="Page2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_dbesy")

[node name="PrevPage" type="Button" parent="Page2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -314.0
offset_right = 211.0
offset_bottom = 314.0
grow_vertical = 2
theme_type_variation = &"ArrowButton"
icon_alignment = 1
script = ExtResource("3_cykfr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Page2/PrevPage"]
position = Vector2(136, 314)
rotation = 1.5708
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_k8uxc")
autoplay = "default"
frame_progress = 0.759694

[node name="NextPage" type="Button" parent="Page2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -314.0
offset_right = -93.0
offset_bottom = 314.0
grow_horizontal = 0
grow_vertical = 2
theme_type_variation = &"ArrowButton"
icon_alignment = 1
script = ExtResource("3_cykfr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Page2/NextPage"]
position = Vector2(20, 314)
rotation = 4.71239
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_k8uxc")
autoplay = "default"
frame_progress = 0.293086

[node name="Page3" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P3Image" type="TextureRect" parent="Page3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_0hwcj")

[node name="PrevPage" type="Button" parent="Page3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -314.0
offset_right = 211.0
offset_bottom = 314.0
grow_vertical = 2
theme_type_variation = &"ArrowButton"
icon_alignment = 1
script = ExtResource("3_cykfr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Page3/PrevPage"]
position = Vector2(136, 314)
rotation = 1.5708
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_k8uxc")
autoplay = "default"
frame_progress = 0.759694

[connection signal="mouse_entered" from="Contents/NextPage" to="Contents/NextPage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Contents/NextPage" to="Contents/NextPage" method="_on_mouse_exited"]
[connection signal="pressed" from="Contents/NextPage" to="." method="next_page"]
[connection signal="mouse_entered" from="Page1/PrevPage" to="Page1/PrevPage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Page1/PrevPage" to="Page1/PrevPage" method="_on_mouse_exited"]
[connection signal="pressed" from="Page1/PrevPage" to="." method="prev_page"]
[connection signal="mouse_entered" from="Page1/NextPage" to="Page1/NextPage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Page1/NextPage" to="Page1/NextPage" method="_on_mouse_exited"]
[connection signal="pressed" from="Page1/NextPage" to="." method="next_page"]
[connection signal="mouse_entered" from="Page2/PrevPage" to="Page2/PrevPage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Page2/PrevPage" to="Page2/PrevPage" method="_on_mouse_exited"]
[connection signal="pressed" from="Page2/PrevPage" to="." method="prev_page"]
[connection signal="mouse_entered" from="Page2/NextPage" to="Page2/NextPage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Page2/NextPage" to="Page2/NextPage" method="_on_mouse_exited"]
[connection signal="pressed" from="Page2/NextPage" to="." method="next_page"]
[connection signal="mouse_entered" from="Page3/PrevPage" to="Page3/PrevPage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Page3/PrevPage" to="Page3/PrevPage" method="_on_mouse_exited"]
[connection signal="pressed" from="Page3/PrevPage" to="." method="prev_page"]
